--- a/lwirth-testing/lwirth-testing.vcxproj
+++ b/lwirth-testing/lwirth-testing.vcxproj
@@ -155,7 +155,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="vulkanTest.hpp" />
+    <ClInclude Include="GFX.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
