--- a/lwirth-testing/lwirth-testing.vcxproj.filters
+++ b/lwirth-testing/lwirth-testing.vcxproj.filters
@@ -4,6 +4,6 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="vulkanTest.hpp" />
+    <ClInclude Include="GFX.hpp" />
   </ItemGroup>
 </Project>
