--- a/lwirth-testing/lwirth-testing.vcxproj.filters
+++ b/lwirth-testing/lwirth-testing.vcxproj.filters
@@ -5,5 +5,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GFX.hpp" />
+    <ClInclude Include="Boi.hpp" />
+    <ClInclude Include="CellSystem.hpp" />
   </ItemGroup>
 </Project>
