--- a/lwirth-lib/lwirth-lib.vcxproj.filters
+++ b/lwirth-lib/lwirth-lib.vcxproj.filters
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="Math.cpp">
-      <Filter>math</Filter>
-    </ClCompile>
     <ClCompile Include="Allocations.cpp">
       <Filter>memory</Filter>
     </ClCompile>
@@ -137,13 +134,13 @@
     <ClCompile Include="PhysicalUnit.cpp">
       <Filter>physics\units</Filter>
     </ClCompile>
+    <ClCompile Include="qmath.cpp">
+      <Filter>math</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Standard.hpp" />
     <ClInclude Include="lwirth.hpp" />
-    <ClInclude Include="Math.hpp">
-      <Filter>math</Filter>
-    </ClInclude>
     <ClInclude Include="Allocations.hpp">
       <Filter>memory</Filter>
     </ClInclude>
@@ -309,6 +306,12 @@
     </ClInclude>
     <ClInclude Include="List.hpp">
       <Filter>memory</Filter>
+    </ClInclude>
+    <ClInclude Include="Math.hpp">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="qmath.hpp">
+      <Filter>math</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
