--- a/lwirth-lib/lwirth-lib.vcxproj.filters
+++ b/lwirth-lib/lwirth-lib.vcxproj.filters
@@ -4,9 +4,6 @@
     <ClCompile Include="Allocations.cpp">
       <Filter>memory</Filter>
     </ClCompile>
-    <ClCompile Include="PoolAllocator.cpp">
-      <Filter>memory</Filter>
-    </ClCompile>
     <ClCompile Include="Exceptions.cpp">
       <Filter>general</Filter>
     </ClCompile>
@@ -136,6 +133,9 @@
     </ClCompile>
     <ClCompile Include="qmath.cpp">
       <Filter>math</Filter>
+    </ClCompile>
+    <ClCompile Include="Texture.cpp">
+      <Filter>graphics\core\types</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -268,12 +268,6 @@
     <ClInclude Include="Matrix.hpp">
       <Filter>math\mathematical objects\linear algebra</Filter>
     </ClInclude>
-    <ClInclude Include="Matrix2x2.hpp">
-      <Filter>math\mathematical objects\linear algebra</Filter>
-    </ClInclude>
-    <ClInclude Include="Matrix4x4.hpp">
-      <Filter>math\mathematical objects\linear algebra</Filter>
-    </ClInclude>
     <ClInclude Include="Vector.hpp">
       <Filter>math\mathematical objects\linear algebra</Filter>
     </ClInclude>
@@ -312,6 +306,18 @@
     </ClInclude>
     <ClInclude Include="qmath.hpp">
       <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="Geometry.hpp">
+      <Filter>math\mathematical objects\geometry</Filter>
+    </ClInclude>
+    <ClInclude Include="LinearAlgebra.hpp">
+      <Filter>math\mathematical objects\linear algebra</Filter>
+    </ClInclude>
+    <ClInclude Include="_Storage.hpp">
+      <Filter>math\mathematical objects\linear algebra</Filter>
+    </ClInclude>
+    <ClInclude Include="Texture.hpp">
+      <Filter>graphics\core\types</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -380,5 +386,8 @@
     <None Include="..\res\shaders\shader.vert">
       <Filter>graphics\shader</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Info.txt" />
   </ItemGroup>
 </Project>
