--- a/lwirth-testing/lwirth-testing.vcxproj
+++ b/lwirth-testing/lwirth-testing.vcxproj
@@ -163,6 +163,9 @@
     <ClInclude Include="CellSystem.hpp" />
     <ClInclude Include="GFX.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="texture.jpg" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
