--- a/lwirth-testing/lwirth-testing.vcxproj.filters
+++ b/lwirth-testing/lwirth-testing.vcxproj.filters
@@ -8,4 +8,7 @@
     <ClInclude Include="Boi.hpp" />
     <ClInclude Include="CellSystem.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="texture.jpg" />
+  </ItemGroup>
 </Project>
